--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/eVBplplhd7g?autoplay=1&amp;loop=1&amp;mute=1&amp;controls=0&amp;playlist=eVBplplhd7g&amp;modestbranding=1&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3" frameborder="0" allowfullscreen>
     </iframe>
     <hr>
-    <video id="grayVP210055_Impressions" width="1920" height="1080" autoplay loop muted controls>
+    <video id="grayVP210055_Impressions" width="1920" height="1080" data-video-type="native" data-video-autoplay="" playsinline="" autoplay="" loop="" muted="" width="320" height="240">
         <source src="./logo.mp4" type="video/mp4" >
       </video>
 
